# agent-kernel

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  pyproject.toml
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  capabilities.md  context_firewall.md  integrations.md  security.md
docs/agent-context/: architecture.md  invariants.md  lessons-learned.md  review-checklist.md  workflows.md
examples/: basic_cli.py  billing_demo.py  http_driver_demo.py
src/agent_kernel/: __init__.py  enums.py  errors.py  handles.py  kernel.py  models.py  policy.py  registry.py  router.py  tokens.py  trace.py
src/agent_kernel/drivers/: __init__.py  base.py  http.py  memory.py
src/agent_kernel/firewall/: __init__.py  budgets.py  redaction.py  summarize.py  transform.py
tests/: conftest.py  test_drivers.py  test_firewall.py  test_handles.py  test_kernel.py  test_logging.py  test_models.py  test_policy.py  test_redaction.py  test_registry.py  test_router.py  test_tokens.py  test_trace.py
