[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weaver-kernel"
version = "0.4.0"
description = "Capability-based security kernel for AI agents operating in large tool ecosystems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "agent-kernel contributors" }]
keywords = ["ai", "agents", "mcp", "security", "capabilities", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/dgenio/agent-kernel"
Repository = "https://github.com/dgenio/agent-kernel"
Documentation = "https://github.com/dgenio/agent-kernel/tree/main/docs"
Changelog = "https://github.com/dgenio/agent-kernel/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-api>=1.20"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_kernel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/"]
